# aiven-assignment

./: .env.aiven.example  .env.local.example  .gitignore  README.md  pyproject.toml
clickstream/: app.py  consumer_runner.py  opensearch_runner.py  producer_runner.py
clickstream/cli/: __init__.py  benchmark.py  config.py  consumer.py  data.py  shared.py  status.py
clickstream/data_exporters/: kafka_event_sink.py  postgresql_event_sink.py  postgresql_session_sink.py
clickstream/pipelines/kafka_producer/: metadata.yaml
clickstream/utils/: __init__.py  aiven.py  config.py  db.py  kafka.py  session_state.py
clickstream/utils/models/: __init__.py  events.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
